# logger

./: CMakeLists.txt
Google_tests/: CMakeLists.txt
include/: ColorPrinting.h  Logger.h
src/: CMakeLists.txt  ColorPrinting.cpp  ColorPrinting.h  ColorText.cpp  ColorText.h  LogEntry.cpp  LogEntry.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h
test/: CMakeLists.txt  ColorPrinting_test.cpp  ColorPrinting_test.h  Logger_test.cpp  Test.cpp  Test_ColorPrinting.cpp  Test_ColorPrinting.h
